[rm] kaggle stuff

--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,4 @@ temp/
 #!! ERROR: visualstudiocaode is undefined. Use list command to see defined gitignore types !!#
 
 # End of https://www.gitignore.io/api/linux,macos,visualstudiocaode,node
+kaggle/
